<resources>
    <string name="app_name">Shwift</string>
    <string name="hire_me">Shwift</string>
    <string name="choose_your">Choose your job type</string>
    <string name="choose_whet">Choose whether you are looking for a job or you are an organization/company that need employees</string>
    <string name="find_a_job">Find a job</string>
    <string name="i_want_to_f">I want to find a job for me</string>
    <string name="find_a_employee">Find an employee</string>
    <string name="i_want_to_find_employees">I want to find employees</string>
    <string name="what_is_you">What is your Expertise?</string>
    <string name="please_sele">Please select the field of expertise</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? <b><font color='#6D23B6'>Login</font></b></string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="don_t_have_account_sign_up">Don’t have an account? <b><font color='#6D23B6'>Sign up</font></b></string>
    <string name="select_email">An email will be sent to the email-id mentioned below</string>
    <string name="user_email">testMail@doomain.com</string>
    <string name="sendOTP">Send OTP</string>
    <string name="code_has_been">Please enter the code that was sent to the specified e-mail.</string>
    <string name="resend_code">Resend the code in 50 s</string>
    <string name="verifyOTP">Verify OTP</string>
    <string name="createNewPass_TxtView">New password</string>
    <string name="renterNewPass_TxtView">Re-enter password</string>
    <string name="continueBtn">Continue</string>
    <string name="passwordResetMsg">Password Reset Message</string>
    <string name="onboarding_logo_tagline">A Swift Solution to your Shift</string>
    <string name="onboarding_get_shift_line">Get Your Shift Now</string>
    <string name="onboarding_get_shift_button_text">Get Shift</string>
    <string name="onboarding_info_1_heading">Get Shift By The Hour!</string>
    <string name="onboarding_info_1_text">Work daily shifts get paid based on the number of hours you put in</string>
    <string name="onboarding_info_next">Next</string>
    <string name="onboarding_info_2_heading">Create The Perfect Profile!</string>
    <string name="onboarding_info_2_text">Use the built in profile builder to highlight your skills</string>
    <string name="onboarding_info_3_heading">Explore Your Potential!</string>
    <string name="onboarding_info_3_text">Start your professional journey with Shwift and discover your inner self</string>
    <string name="good_morning">Good morning</string>
    <string name="john_doe">John Doe</string>
    <string name="search_for_a_job_or_company">Search for a job or company</string>
    <string name="recommendation">Recommendation</string>
    <string name="see_all">See All</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="google_llc">Google LLC</string>
    <string name="california_united_sates">California, United Sates</string>
    <string name="_10_000_25_000_month">$10,000 - $25,000 / month</string>
    <string name="recent_jobs">Recent Jobs</string>
    <string name="full_time">Full time</string>
    <string name="remote">Remote</string>
    <string name="home">Home</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string name="applications">Applications</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="summary">Summary</string>
    <string name="save">Save</string>
    <string name="contact_information">Contact Information</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="summary_max_500_characters">Summary (Max. 500 characters)</string>
    <string name="applicant_view_job_description_job_description_heading"><b>Job Description :</b></string>
    <string name="applicant_view_job_description_requirement_skills_heading"><b>Requirement and Skills :</b></string>
    <string name="applicant_view_job_description_education_heading"><b>Education :</b></string>
    <string name="applicant_view_job_description_key_skills_heading"><b>Key Skills :</b></string>
    <string name="applicant_view_job_description_job_summary_heading"><b>Job Summary :</b></string>
    <string name="applicant_view_job_description_about_company_heading"><b>About Company :</b></string>
    <string name="apply"><b>Apply</b></string>
    <string name="application_stages_heading"><b>Applications</b></string>
    <string name="application_stages_search_tab_hint">Search</string>
    <string name="work_experience">Work Experience</string>
    <string name="enter_your_work_experience_below">Enter your work experience below</string>
    <string name="enter_your_education_below">Enter your education below</string>
    <string name="education">Education</string>
    <string name="projects">Projects</string>
    <string name="enter_your_projects_below">Enter your projects below</string>
    <string name="application_stage_on_click_heading_text"><b>Application Status</b></string>
    <string name="application_stage_on_click_your_status_text">Your Application Status</string>
    <string name="good_afternoon">Good Afternoon!</string>
    <string name="good_evening">Good Evening!</string>
    <string name="part_time">Part time</string>
    <string name="temp">Temp</string>
    <string name="on_site">On site</string>
    <string name="employer_account_setup_company_details_heading_text"><b>Tell Us About Your Company</b></string>
    <string name="employer_account_setup_company_details_fill_details_text">Please fill up the details</string>
    <string name="employer_account_setup_company_details_organization_name_hint">Name Of Your Organization</string>
    <string name="employer_account_setup_company_details_organization_strength_hint">Strength Of Your Organization</string>
    <string name="employer_account_setup_company_details_company_website_hint">Company Website</string>
    <string name="employer_account_setup_company_details_company_description_hint">Company Description</string>
    <string name="activity_employer_account_setup_recruiter_details_first_name_text">Recruiter\'s First Name</string>
    <string name="activity_employer_account_setup_recruiter_details_last_name_text">Recruiter\'s Middle or Last Name</string>
    <string name="activity_employer_account_setup_recruiter_details_company_website_text">Compnay\'s Website</string>
    <string name="activity_employer_account_setup_recruiter_details_organization_email_text">Recruiter\'s Organizational Email</string>
    <string name="activity_employer_account_setup_recruiter_details_organization_phone_text">Recruiter\'s Phone Number</string>
    <string name="activity_employer_account_setup_recruiter_details_linkedin_url_text">Recruiter\'s Linkedin Profile (URL)</string>
    <string name="recent_applicants">Recent applicants</string>
    <string name="add_job_details"><b>Add job details</b></string>
    <string name="job_details_activity_jobTitle_text">Job title</string>
    <string name="job_details_activity_jobTitle_hint">Job title</string>
    <string name="job_details_activity_vacancies_hint">Vacancies</string>
    <string name="job_details_activity_vacancies_text">Vacancies</string>
    <string name="job_details_activity_location_text">Location for this job</string>
    <string name="job_details_activity_description_text">Brief description</string>
    <string name="job_details_activity_jobType_hint">Job type (Full-time, Hourly-shift, etc.)</string>
    <string name="job_details_activity_jobType_text">Job type</string>
    <string name="job_details_activity_WorkType_text">Work type</string>
    <string name="job_details_activity_workType_hint">Work type (Remote, Hybrid, etc.)</string>
    <string name="job_details_activity_pay_text">Pay</string>
    <string name="job_details_activity_industryType_text">Industry type</string>
    <string name="job_details_activity_rolres_text">Roles and Responsibilities</string>
    <string name="job_details_activity_education_text">Required education</string>
    <string name="job_details_activity_skills_hint">Key skills (seperate using commas)</string>
    <string name="job_details_activity_skills_text">Key skills</string>
    <string name="job_details_activity_hiringDeadline_text">Hiring deadline</string>
    <string name="job_details_activity_hiringDeadline_hint">DD/MM/YYYY</string>
    <string name="preview">Preview</string>
    <string name="job_details_activity_Minpay_text">Minimum pay</string>
    <string name="job_details_activity_Minpay_hint">Minimum pay per month</string>
    <string name="job_details_activity_Maxpay_text">Maximum pay</string>
    <string name="job_details_activity_Maxpay_hint">Maximum pay per month</string>
    <string name="job_details_activity_experience_text">Experience</string>
    <string name="job_details_activity_priority_text">Job priority</string>
    <string name="job_details_activity_pay_hint">Hourly pay($)</string>
    <string name="job_details_activity_requiremnets_text">enter comma separated required skills</string>
    <string name="job_details_activity_hours_text">Number of hours</string>
    <string name="job_details_activity_hours_hint">Number of hours</string>
    <string name="job_details_activity_recruiter_text">Recruiter Name</string>
    <string name="job_details_activity_recruiter_hint">Recruiter name</string>
    <string name="job_details_activity_startDate_text">Start date</string>
    <string name="job_details_activity_applicationDeadline_text">Application deadline</string>
    <string name="applicant_view_job_description_NumberOfHours_heading"><b>Number of Hours:</b></string>
    <string name="applicant_view_job_description_recruiter_heading"><b>Recruiter Name:</b></string>
    <string name="applicant_view_job_description_start_date_heading"><b>Start Date:</b></string>
    <string name="applicant_view_job_description_application_deadline_heading"><b>Application Deadline:</b></string>
    <string name="exit_message">Are you sure you want to exit the application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_organization_name">Organization_name</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>