<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/back_arrow"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/person"/>

    <TextView
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login_to_your_account"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp">

        <ImageView android:layout_width="24dp"
            android:layout_height="18dp"
            android:src="@drawable/email_icon"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/email_id_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/email_hint"/>

    </LinearLayout>

    <View style="@style/Divider.Horizontal"
        android:layout_marginHorizontal="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/lock_icon"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/password_login"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginHorizontal="10dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>

        <ImageView
            android:id="@+id/show_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/eye_regular"
            app:tint="@color/gray"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View style="@style/Divider.Horizontal"
        android:layout_marginHorizontal="40dp"/>

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/remember_me"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:buttonTint="@color/purple"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/button_account_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/go_to_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_account_sign_up"
        android:textAlignment="center"
        android:textColor="#585858"
        android:textSize="16sp"
        android:gravity="center_horizontal|center"
        />

</LinearLayout>
