<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/back_arrow"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/person"/>

    <TextView
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_new_account"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp">

        <ImageView android:layout_width="24dp"
            android:layout_height="18dp"
            android:src="@drawable/email_icon"
            android:layout_gravity="center"/>
        
        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/email_hint"/>

    </LinearLayout>

    <View style="@style/Divider.Horizontal"
        android:layout_marginHorizontal="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/lock_icon"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/password"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginHorizontal="10dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>

        <ImageView
            android:id="@+id/show_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/eye_regular"
            app:tint="@color/gray"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View style="@style/Divider.Horizontal"
        android:layout_marginHorizontal="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/lock_icon"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginHorizontal="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>

        <ImageView
            android:id="@+id/show_confirm_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/eye_regular"
            app:tint="@color/gray"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View style="@style/Divider.Horizontal"
        android:layout_marginHorizontal="40dp"/>

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/create_account"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account_sign_in"
        android:textAlignment="center"
        android:textColor="#585858"
        android:textSize="16sp"
        android:gravity="center_horizontal|center"
        />


</LinearLayout>

